--- a/CTF/cyber-raider.yml
+++ b/CTF/cyber-raider.yml
@@ -9,7 +9,7 @@ Parameters:
   InstanceType:
     Description: WebServer EC2 instance type
     Type: String
-    Default: t2.micro
+    Default: t2.small
     AllowedValues:
       - t2.micro
       - t2.small
